Feature/60 change naming from workflow to playbook
